<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="210dp"
        android:layout_height="49dp"
        android:autofillHints=""
        android:background="@drawable/ic_bottomline"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:text="@string/username"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/imageButton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewIp"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="LabelFor,RtlSymmetry" />

    <TextView
        android:id="@+id/textViewIp"
        android:layout_width="210dp"
        android:layout_height="38dp"
        android:layout_marginTop="232dp"
        android:background="@color/lightBlue"
        android:gravity="center"
        android:text="@string/ip"
        android:textColor="@color/grey"
        app:layout_constraintBottom_toTopOf="@+id/imageButton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="113dp"
        android:layout_height="59dp"
        android:background="@drawable/ic_enter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.662"
        android:contentDescription="@string/todo" />

</androidx.constraintlayout.widget.ConstraintLayout>